adjusted spacing between element and added a border to the product item container and defined a test component to make sure that images are aligned properly

--- a/src/app/containers/ProductItem/c/productitem.scss
+++ b/src/app/containers/ProductItem/c/productitem.scss
@@ -3,12 +3,19 @@
 
 .prodItemWrapper {
     min-width: 256px;
-    min-height: 352px;
+    min-height: 452px;
     background: $c-white;
-    padding: 15px 20px;
+    padding: 15px 12px;
+    display: flex;
+}
+
+.prodItemContainer {
     display: flex;
     flex-direction: column;
     position: relative;
+    padding: 0 10px;
+    border: 1px solid rgba($c-black, 0.09);
+    width: 100%;
 }
 
 .imageContainer {
@@ -17,26 +24,31 @@
     justify-content: center;
     align-items: center;
     align-self: center;
+    margin: auto 0;
 }
 
 .prodName {
     font-size: 20px;
-    line-height: 48px;
-    margin: 0;
+    line-height: 24px;
+    margin: 12px 0;
 }
 
 .productImg {
     max-width: 100%;
+    max-height: 512px;
 }
 
 .prodCategory {
     color: $c-tilelist-color;
-    margin: 0;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 7px 0;
 }
 
 .prodDescription {
     font-size: 16px;
     line-height: 20px;
+    padding-bottom: 25px;
     margin: 0;
 }
 
@@ -66,6 +78,14 @@
     color: $c-white;
 }
 @media screen and (min-width: 1240px) {
+    .prodItemWrapper {
+        padding: 0;
+    }
+
+    .prodItemContainer {
+        border: none;
+    }
+
     .prodItemWrapper:hover {
         .tileList {
             @include fadeIn
